; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts5/extr_fts5_buffer.c_sqlite3Fts5MallocZero.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts5/extr_fts5_buffer.c_sqlite3Fts5MallocZero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_NOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sqlite3Fts5MallocZero(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i8* null, i8** %5, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @SQLITE_OK, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %27

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = call i8* @sqlite3_malloc64(i64 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %10
  %16 = load i64, i64* %4, align 8
  %17 = icmp sgt i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i32, i32* @SQLITE_NOMEM, align 4
  %20 = load i32*, i32** %3, align 8
  store i32 %19, i32* %20, align 4
  br label %21

21:                                               ; preds = %18, %15
  br label %26

22:                                               ; preds = %10
  %23 = load i8*, i8** %5, align 8
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @memset(i8* %23, i32 0, i64 %24)
  br label %26

26:                                               ; preds = %22, %21
  br label %27

27:                                               ; preds = %26, %2
  %28 = load i8*, i8** %5, align 8
  ret i8* %28
}

declare dso_local i8* @sqlite3_malloc64(i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
